# rust-yairmov

./: .env  Cargo.toml  Dockerfile  README.md
admin/: .env  Cargo.toml  app.yaml  build.rs
admin/src/: config.rs  error.rs  lib.rs  main.rs  request.rs
admin/src/api/: mod.rs  routes.rs  user.rs
admin/src/api/users/: create_user.rs  mod.rs  route.rs
admin/src/database/: connection.rs  mod.rs  user.rs
admin/src/database/entity/: admin_application_group_sort.rs  admin_application_menu_copy1.rs  admin_data_source_app.rs  admin_file.rs  admin_org_ward_area.rs  admin_role_data_masking.rs  admin_standard_application.rs  admin_system_logo.rs  admin_user_project_top.rs  admin_user_ward_area.rs
admin/src/database/repo/: admin_user.rs  mod.rs
admin/src/extra/: logger.rs  mod.rs  redis.rs
admin/src/model/: mod.rs
admin/src/model/entity/: admin_data_source.rs  admin_org_dept_ward.rs  admin_org_ward.rs  admin_project_member.rs  admin_role_application.rs  admin_role_check.rs  admin_role_data_source.rs  admin_standard_application_menu.rs  admin_user.rs  admin_user_role_config.rs  prelude.rs
admin/src/model/params/: user.rs
admin/src/proto/: echo.proto  helloworld.rs  mod.rs  stream.rs
admin/src/service/: mod.rs  user.rs
admin/src/service/rpc/: hello.rs  mod.rs  user_server.rs
admin/src/service/users/: manager.rs  mod.rs
api/: Cargo.toml
api/src/: app_error.rs  app_request.rs  app_response.rs  app_routes.rs  app_state.rs  lib.rs
api/src/users/: create_user.rs  login.rs  me.rs  mod.rs  route.rs
client/: Cargo.toml  build.rs
client/src/: main.rs
client/src/proto/: mod.rs
common_token/: .gitignore  Cargo.toml
common_token/src/: app_error.rs  app_request.rs  app_response.rs  app_state.rs  jwt.rs  lib.rs
database/: Cargo.toml
database/src/: lib.rs
database/src/db/: connection.rs  error.rs  mod.rs
database/src/entity/: admin_application.rs  admin_application_group.rs  admin_application_menu.rs  admin_config_data_masking.rs  admin_data_masking.rs  admin_logs.rs  admin_org.rs  admin_org_dept.rs  admin_org_system.rs  admin_project.rs  admin_role.rs  admin_role_application_menu.rs  admin_role_data_authority.rs  admin_role_data_org.rs  admin_role_medical.rs  admin_role_privacy.rs  admin_todo.rs  admin_user.rs  admin_variable_config.rs  mod.rs  prelude.rs
database/src/repo/: admin_user.rs
database/src/users/: models.rs
domain/: Cargo.toml
domain/src/users/: manager_impl.rs  mod.rs
extra/: Cargo.toml
extra/src/: jwt.rs  lib.rs
extra/src/logger/: tracing_logger.rs
extra/src/redis/: mod.rs  operation.rs
hello/: Cargo.toml  build.rs
hello/src/: main.rs
hello/src/proto/: helloworld.rs  mod.rs  stream.rs
repository/: Cargo.toml
repository/src/: lib.rs
server_app/: Cargo.toml
server_app/src/: main.rs
server_lib/: Cargo.toml
server_lib/src/: lib.rs
service/: Cargo.toml
service/src/: errors.rs  lib.rs
service/src/users/: errors.rs  manager.rs  manager_impl.rs  mod.rs  models.rs
util/: Cargo.toml
util/src/: jwt.rs  lib.rs
util/src/date/: mod.rs  timezone.rs
util/src/i18n/: mod.rs
util/src/jwt/: mod.rs
vars/src/: lib.rs
