[package]
name = "common_token"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7", features = ["macros"] }
serde = { version = "1.0", features = ["derive"] }
validator = { version = "0.18.1", features = ["derive"] }
thiserror = "1.0"
tracing = { version = "0.1" }
once_cell = { version = "1" }
wax="0.6.0"
dashmap="6.1.0"
jsonwebtoken = "9"
async-trait = "0.1"
sea-orm = { version = "1.1.0"}
config = "0.14.0"
anyhow = "1.0"