[package]
name = "database"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "database"
path = "src/lib.rs"

[dependencies]
sqlx = { version = "0.8.2", default-features = false, features = [
    "runtime-tokio-native-tls",
    "macros",
    "chrono",
    "postgres",
] }
serde = { version = "1.0", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1.0"
once_cell = "1.20.2"
tracing = { version = "0.1" }
sea-orm = { version = "1.1.0", features = [ "sqlx-postgres", "runtime-tokio-native-tls", "macros" ,"debug-print"] }
thiserror = "1.0.64"

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
