[package]
name = "extra"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
default = []
lib_redis = ["redis"]

[dependencies]
# redis
redis = { version = "0.23", features = [
    "connection-manager",
    "tokio-comp",
],optional = true }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0" }
# logger
time = "0.3"
tracing = { version = "0.1" }
tracing-subscriber = { version = "0.3", features = [
    "env-filter",
    "json",
    "local-time",
] }
tracing-appender = { version = "0.2" }
once_cell = "1.10.0"
thiserror = "1.0"
# jwt
jsonwebtoken = { version = "9" }
chrono = { version = "0.4" }
[build-dependencies]
walkdir = "2"