[package]
name = "util"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = []
# jwt
jwt = ["jsonwebtoken", "chrono", "serde"]
# date
date = ["local", "time"]
local = ["Shanghai"]
# timezone list
Shanghai = []
Hawaii = []
# http
http = ["reqwest"]

[dependencies]
# date
time = { version = "0.3", features = [
    "local-offset",
    "formatting",
    "parsing",
], optional = true }


# jwt
jsonwebtoken = { version = "9", optional = true }
chrono = { version = "0.4", optional = true }
serde = { version = "1.0", optional = true }

# i18n
toml = "0.8"

# http
reqwest = { version = "0.12", features = ["json"], optional = true }

once_cell = "1.10.0"
thiserror = "1.0"

[build-dependencies]
walkdir = "2"
