[package]
name = "util"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# jwt
jsonwebtoken = { version = "9" }
chrono = { version = "0.4" }
serde = { version = "1.0" }
once_cell = "1.10.0"
thiserror = "1.0"
serde_json = "1.0.128"

[build-dependencies]
walkdir = "2"
